# simple-event

./: CMakeLists.txt  readme.md
docs/: CMakeLists.txt  Doxyfile.in
include/simple/event/: dispatcher.h
tests/: CMakeLists.txt  main.cpp
tests/test_include/: test_include_dispatcher.cpp
tests/test_usage/: test_usage_dispatcher.cpp
